manifests/spring-petclinic/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
    - name: http
      protocol: TCP
      port: 8080
