manifests/spring-petclinic/services.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-stable
  namespace: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
    - name: http
      protocol: TCP
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-canary
  namespace: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
    - name: http
      protocol: TCP
      port: 8080
