manifests/spring-petclinic/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-petclinic
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: spring-petclinic.lab.home
    http:
      paths:
      - backend:
          serviceName: spring-petclinic
          servicePort: http
        path: /
  tls:
  - hosts:
    - spring-petclinic.lab.home
    secretName: spring-petclinic-tls
